--- a/styles/common-templates/_header.scss
+++ b/styles/common-templates/_header.scss
@@ -1,5 +1,4 @@
 .header{
-    position: relative;
     &__title{
         display: none;
     }
@@ -104,5 +103,68 @@
     padding: .28rem;
     img{
         width: 15px;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .show-links{
+        position: static;
+        filter: none;
+    }
+
+    .header{
+        background-color: $color-oscuro;
+        padding-left: 9rem;
+        padding-right: 9rem;
+        padding-top: 1rem;
+        padding-bottom: 4rem;
+        &__title{
+            display: block;
+            @include roboto-font;
+            color: $color-blanco;
+        }
+    }
+
+    .navbar{
+        width: 80%;
+        margin: 0 auto;
+        padding-right: 4rem;
+        filter: none;
+        margin-top: -2.5rem;
+        margin-bottom: -2.65rem;
+
+        &__hamburger-button{
+            display: none;
+        }
+
+        &__logo{
+            width: 20%;
+            &__letter{
+                font-size: 2.2rem;
+            }
+        }
+
+        &__links-container{
+            display: flex;
+            align-items: center;
+            gap: 3rem;
+            width: 60%;
+
+            &__link{
+                margin: 0;
+            }
+        }
+
+        &__buttons{
+
+            &__button{
+                border: 2px solid #8585854D;
+                padding: .8rem;
+
+                &__image{
+                    width: 18px;
+                }
+            }
+        }
     }
 }
