--- a/styles/common-templates/_header.scss
+++ b/styles/common-templates/_header.scss
@@ -128,7 +128,7 @@
     .navbar{
         width: 80%;
         margin: 0 auto;
-        padding-right: 4rem;
+        justify-content: space-evenly;
         filter: none;
         margin-top: -2.5rem;
         margin-bottom: -2.65rem;
@@ -138,7 +138,7 @@
         }
 
         &__logo{
-            width: 20%;
+            width: 25%;
             &__letter{
                 font-size: 2.2rem;
             }
