--- a/styles/common-templates/_identifier.scss
+++ b/styles/common-templates/_identifier.scss
@@ -20,5 +20,6 @@
 @media only screen and (min-width: 1000px) {
     .identifier{
         margin-top: -3rem;
+        padding-right: 15rem;
     }
 }
