--- a/styles/common-templates/_header.scss
+++ b/styles/common-templates/_header.scss
@@ -164,6 +164,10 @@
                 &__image{
                     width: 18px;
                 }
+
+                &--user{
+                    margin-right: .7rem;
+                }
             }
         }
     }
