arreglo de icono desaparecido del form de home

--- a/styles/common-templates/_front.scss
+++ b/styles/common-templates/_front.scss
@@ -72,7 +72,7 @@
     
             &__date-input::-webkit-inner-spin-button,
             &__date-input::-webkit-calendar-picker-indicator {
-                background-image: url('../../assets/icons/home-page/calendar.png');
+                background-image: url('../assets/icons/home-page/calendar.png');
                 position: absolute;
                 left: 0;
                 font-size: 1.1rem;
