--- a/styles/room-details/templates/_room-details-section.scss
+++ b/styles/room-details/templates/_room-details-section.scss
@@ -100,7 +100,7 @@
 
                     &::-webkit-inner-spin-button,
                     &::-webkit-calendar-picker-indicator {
-                        background-image: url('../../assets/icons/room-details-page/calendar-grey.png');
+                        background-image: url('../assets/icons/room-details-page/calendar-grey.png');
                         position: absolute;
                         right: 7%;
                         font-size: 1.1rem;
