--- a/styles/home/templates/_about.scss
+++ b/styles/home/templates/_about.scss
@@ -99,3 +99,63 @@
         }
     }
 }
+
+@media only screen and (min-width: 1000px) {
+    .about-section{
+        
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: flex-start;
+        margin-top: 10rem;
+        &__images-container{
+            margin: 0;
+            display: flex;
+            align-items: flex-start;
+            gap: 2rem;
+            width: 35%;
+            margin-right: -8rem;
+            z-index: 2;
+            &__column{
+                margin: 0;
+                display: flex;
+                flex-direction: column-reverse;
+                gap: 2rem;
+                &--lower-height{
+                    flex-direction: column;
+                    margin-top: 2rem;
+                }
+
+                &__text-container{
+                    aspect-ratio: 3 / 3.5;
+                    padding: 0;
+                    align-content: center;
+                }
+
+                &__image{
+                    aspect-ratio: 3 / 3.5;
+
+                }
+            }
+        }
+
+        &__text-container{
+            width: 60%;
+            padding: 0 10rem;
+            padding-bottom: 20rem;
+            margin-top: 12rem;
+            flex-shrink: 0;
+            &__subtitle{
+                margin-top: -3rem;
+            }
+
+            &__title{
+                font-size: 5rem;   
+                width: 75%;
+            }
+
+            &__text{
+                width: 50%;
+            }
+        }
+    }
+}
