--- a/styles/index.css
+++ b/styles/index.css
@@ -545,6 +545,58 @@ body {
   margin: 0;
 }
 
+@media only screen and (min-width: 1000px) {
+  .about-section {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    margin-top: 10rem;
+  }
+  .about-section__images-container {
+    margin: 0;
+    display: flex;
+    align-items: flex-start;
+    gap: 2rem;
+    width: 35%;
+    margin-right: -8rem;
+    z-index: 2;
+  }
+  .about-section__images-container__column {
+    margin: 0;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 2rem;
+  }
+  .about-section__images-container__column--lower-height {
+    flex-direction: column;
+    margin-top: 2rem;
+  }
+  .about-section__images-container__column__text-container {
+    aspect-ratio: 3/3.5;
+    padding: 0;
+    align-content: center;
+  }
+  .about-section__images-container__column__image {
+    aspect-ratio: 3/3.5;
+  }
+  .about-section__text-container {
+    width: 60%;
+    padding: 0 10rem;
+    padding-bottom: 20rem;
+    margin-top: 12rem;
+    flex-shrink: 0;
+  }
+  .about-section__text-container__subtitle {
+    margin-top: -3rem;
+  }
+  .about-section__text-container__title {
+    font-size: 5rem;
+    width: 75%;
+  }
+  .about-section__text-container__text {
+    width: 50%;
+  }
+}
 .rooms-section {
   margin-bottom: 2.5rem;
 }
