--- a/styles/common-templates/_variables.scss
+++ b/styles/common-templates/_variables.scss
@@ -10,6 +10,7 @@ $color-gris-roto: #C2C2C2;
 $color-gris-oscurecido: #999999;
 $color-oscuro-mas-claro: #292929;
 $color-rosa: #DE5777;
+$color-dorado: #AD9D82;
 
 @mixin section-title{
     font-size: 3.4rem;
