--- a/styles/home/templates/_rooms.scss
+++ b/styles/home/templates/_rooms.scss
@@ -129,6 +129,9 @@
 @media only screen and (min-width: 1000px) {
     .rooms-section{
         margin-bottom: 4rem;
+        &__title{
+            font-size: 5rem;
+        }
         &__swiper{
 
             .room-selection{
