seccion hotel-photos desktop

--- a/styles/home/templates/_menu.scss
+++ b/styles/home/templates/_menu.scss
@@ -98,6 +98,7 @@
     .menu{
         padding: 0 20rem;
         padding-top: 15rem;
+        margin-bottom: 5rem;
         &__donut-image{
             width: 230px;
             right: auto;
