--- a/styles/home/templates/_hotel-photos.scss
+++ b/styles/home/templates/_hotel-photos.scss
@@ -19,3 +19,22 @@
         }   
     }
 }
+
+@media only screen and (min-width: 1000px) {
+    .hotel-images-swiper{
+        .swiper-wrapper{
+            display: flex;
+            justify-content: center;
+
+            .swiper-slide{
+                width: 20%;
+        
+                .hotel-image{
+                    width: 100%;
+                    aspect-ratio: 1/1;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+}
