--- a/styles/home/templates/_satisfaction.scss
+++ b/styles/home/templates/_satisfaction.scss
@@ -33,3 +33,18 @@
         }
     }
 }
+
+@media only screen and (min-width: 1000px){
+    .satisfaction{
+        display: flex;
+        justify-content: space-between;
+        width: 60%;
+        padding: 5rem;
+        margin: 0 auto;
+        margin-bottom: 4rem;
+
+        &__archievement{
+            margin: 0;
+        }
+    }
+}
