--- a/styles/index.css
+++ b/styles/index.css
@@ -1107,6 +1107,19 @@ body {
   margin-bottom: 0;
 }
 
+@media only screen and (min-width: 1000px) {
+  .satisfaction {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+    padding: 5rem;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+  }
+  .satisfaction__archievement {
+    margin: 0;
+  }
+}
 .about {
   margin-top: 1.75rem;
   padding: 2rem 1rem;
