--- a/styles/about/templates/_counter.scss
+++ b/styles/about/templates/_counter.scss
@@ -61,3 +61,35 @@
         }
     }
 }
+
+@media only screen and (min-width: 1000px){
+    .counter{
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+
+        &__archievement-list{
+            margin-bottom: 3rem;
+            display: flex;
+            padding: 0 2rem;
+            justify-content: space-between;
+
+            &__archievement{
+                margin: 0;
+
+                &__text-container{
+                    margin-right: 1rem;
+                }
+            }
+        }
+
+        &__images-swiper{
+            .swiper-wrapper{
+                gap: 1rem;
+                .swiper-slide{
+                    width: 50%;
+                }
+            }
+        }
+    }
+}
